{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 9,
  "lineage": "f5f068ed-aab4-b70e-f3ed-a8a0a1dbf41d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941377150778:internet-gateway/igw-043017739e33050a4",
            "id": "igw-043017739e33050a4",
            "owner_id": "941377150778",
            "tags": {
              "Name": "My-Internet-Gateway"
            },
            "vpc_id": "vpc-052f82a98248d2103"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0954e0c3bf2513a14",
            "owner_id": "941377150778",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043017739e33050a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Route-Table"
            },
            "vpc_id": "vpc-052f82a98248d2103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eaaa04e3fdf5189",
            "route_table_id": "rtb-0954e0c3bf2513a14",
            "subnet_id": "subnet-0e2bc9c2542e0ec37"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941377150778:security-group/sg-091127f4dfb38b8cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091127f4dfb38b8cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20240925142411838900000001",
            "name_prefix": "",
            "owner_id": "941377150778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f82a98248d2103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941377150778:subnet/subnet-0e2bc9c2542e0ec37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e2bc9c2542e0ec37",
            "map_public_ip_on_launch": false,
            "owner_id": "941377150778",
            "tags": {
              "Name": "My-Subnet"
            },
            "vpc_id": "vpc-052f82a98248d2103"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941377150778:vpc/vpc-052f82a98248d2103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3866544bb51771d",
            "default_route_table_id": "rtb-0448c263a94a6a0b8",
            "default_security_group_id": "sg-09b7d98f946d20f3e",
            "dhcp_options_id": "dopt-0ad9b7f4f838626b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-052f82a98248d2103",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0448c263a94a6a0b8",
            "owner_id": "941377150778",
            "tags": {
              "Name": "My-VPC"
            }
          }
        }
      ]
    }
  ]
}